# gimbal_control

./: README.md
LinuxSerialControl/: CMakeLists.txt  LinuxSerialControl.cpp
